Data profile spark job investigation.